[project]
name = "gnnepcsaftcli"
version = "0.1.0"
description = ""
authors = [
    {name = "wildsonbbl",email = "wil_bbl@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer (>=0.15.1,<0.16.0)",
    "torch (>=2.5.1,<3.0.0)",
    "torch-geometric (>=2.6.1,<3.0.0)",
    "lightning (>=2.5.0.post0,<3.0.0)",
    "rdkit (>=2024.9.4,<2025.0.0)",
    "ogb (>=1.3.6,<2.0.0)",
    "gnnepcsaft @ https://github.com/wildsonbbl/gnnepcsaft/archive/refs/heads/dev.zip",
    "ml-collections (==0.1.1)",
    "teqp (>=0.22.0,<0.23.0)",
    "feos (>=0.8.0,<0.9.0)",
    "si-units (>=0.11.0,<0.12.0)",
    "pcsaftsuperanc (>=0.0.7,<0.0.8)"
]

[project.scripts]
gnnepcsaftcli = "gnnepcsaftcli.main:app"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
