[project]
name = "gnnepcsaftcli"
version = "0.4.0"
description = ""
authors = [
    {name = "wildsonbbl",email = "wil_bbl@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer (>=0.15.1,<0.16.0)",
    "rdkit (>=2024.9.4,<2025.0.0)",
    "gnnepcsaft",
    "onnxruntime (>=1.20.1,<2.0.0)",

]

[project.scripts]
gnnepcsaftcli = "gnnepcsaftcli.main:app"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[tool.poetry.dependencies]
